@@ -1,0 +1,197 @@
+## SECTION=shell_and_console
+menuconfig UDEV
+	tristate
+	prompt "udev                          "
+	select ROOTFS_DEV
+	select ROOTFS_RUN	if !UDEV_LEGACY
+	select LIBC_RT
+	select LIBKMOD		if !UDEV_LEGACY
+	select LIBBLKID		if !UDEV_LEGACY
+	select HOST_GPERF	if UDEV_KEYMAPS
+	select ACL		if UDEV_ACL
+	select ACL_SHARED	if UDEV_ACL
+	select GLIB		if UDEV_ACL || UDEV_LIBGUDEV
+	select PCIUTILS		if UDEV_PERSISTENT_PCI
+	select USBUTILS		if UDEV_PERSISTENT_USB
+	help
+	  udev provides a dynamic device directory containing only the files for
+	  actually present devices. It creates or removes device node files in the
+	  /dev directory, or it renames network interfaces.
+
+	  Usually udev runs as udevd(8) and receives uevents directly from the
+	  kernel if a device is added or removed from the system.
+
+	  If udev receives a device event, it matches its configured rules against
+	  the available device attributes provided in sysfs to identify the
+	  device. Rules that match, may provide additional device information or
+	  specify a device node name and multiple symlink names and instruct udev
+	  to run additional programs as part of the device event handling.
+
+	  Ensure: This udev implementation requires at least kernel 2.6.32 and
+	  must have sysfs, unix domain sockets, networking and devtmpfs enabled.
+
+if UDEV
+
+if !SYSTEMD
+
+menu "build options                 "
+
+config UDEV_LEGACY
+	bool
+	prompt "use older udev version"
+	help
+	  This may be necessary e.g. for systems without devtmpfs
+
+config UDEV_DEBUG
+	bool
+	prompt "enable debug messages"
+	help
+	  If enabled, very verbose debugging messages will be compiled
+	  into the udev binaries. The actual level of debugging is specified
+	  in the udev config file (refer entry "udev_log")
+
+config UDEV_SYSLOG
+	bool
+	prompt "enable system logging"
+	help
+	  If enabled, udev is able to pass errors or debug information
+	  to syslog. This is very useful to see what udev is doing or not doing.
+	  Note: To use this feature the syslog daemon must start before udev
+
+endmenu
+
+endif
+
+menu "install options               "
+
+config UDEV_ETC_CONF
+	bool
+	default y
+	prompt "install udev.conf"
+	help
+	  Installs /etc/udev/udev.conf. If you don't wish to install the
+	  generic udev.conf, just put a copy of your own udev.conf file into
+	  your own projectroot/etc/udev/
+
+config UDEV_DRIVERS_RULES
+	bool
+	prompt "install udev driver rules"
+	help
+	  This will install the generic udev drivers rules files from the udev package
+	  under /lib/udev/rules.d/,
+	  These rules are required to automatically load kernel modules on
+	  udev start.
+	  If unsure say Y.
+
+config UDEV_KEYMAPS
+	bool
+	prompt "install keymaps"
+	help
+	  This will install the keymaps shipped with udev. These are mostly
+	  to map custom hardware's multimedia keys of various laptops
+
+config UDEV_CUST_RULES
+	bool
+	prompt "install customized udev rules"
+	help
+	  This will install the customized udev rules files from
+	  projectroot/lib/udev/rules.d into /lib/udev/rules.d
+
+config UDEV_LIBUDEV
+	bool
+	prompt "install libudev"
+	help
+	  Install libudev.so on the target.
+
+config UDEV_LIBGUDEV
+	bool
+	select UDEV_LIBUDEV
+	prompt "install libgudev"
+	help
+	  Install libgudev.so on the target.
+
+config UDEV_STARTSCRIPT
+	bool
+	default y
+	prompt "install /etc/init.d/udev or /etc/init/udev.conf"
+	help
+	  Install the startup magic for either bbinit or upstart.
+	  Select Y here, as this is what you usually want.
+
+endmenu
+
+menu "persistent device node links  "
+
+config UDEV_PERSISTENT_ATA
+	bool
+	prompt "ata"
+
+config UDEV_PERSISTENT_CDROM
+	bool
+	prompt "cdrom"
+
+config UDEV_PERSISTENT_EDD
+	bool
+	depends on UDEV_LEGACY
+	prompt "BIOS EDD data"
+
+config UDEV_PERSISTENT_GENERATOR
+	bool
+	depends on !SYSTEMD
+	prompt "cd / network generator"
+	help
+	  This will generate udev-based persistent naming rules for
+	  your CD/DVD media and network devices
+	  Warning: this needs write access to /etc/udev/rules.d/
+
+config UDEV_PERSISTENT_PCI
+	bool
+	prompt "pci"
+
+config UDEV_PERSISTENT_USB
+	bool
+	prompt "usb"
+
+config UDEV_PERSISTENT_SCSI
+	bool
+	prompt "scsi"
+
+config UDEV_PERSISTENT_V4L
+	bool
+	prompt "v4l"
+
+endmenu
+
+menu "misc helper                   "
+
+config UDEV_ACCELEROMETER
+	bool
+	prompt "accelerometer"
+	help
+	  When an "change" event is received on an accelerometer,
+	  open its device node, and from the value, as well as the previous
+	  value of the property, calculate the device's new orientation,
+	  and export it as ID_INPUT_ACCELEROMETER_ORIENTATION.
+
+config UDEV_ACL
+	bool
+	depends on UDEV_LEGACY
+	prompt "local user acl permissions support"
+	help
+	  FIXME
+
+config UDEV_COLLECT
+	bool
+	prompt "collect"
+	help
+	  Collect variables across events
+
+config UDEV_MTD_PROBE
+	bool
+	prompt "mtd_probe"
+	help
+	  autoloads FTL module for mtd devices
+
+endmenu
+
+endif
