@@ -1,6 +1,8 @@
 2013-12-11	Stephan Linz <linz@li-pro.net>
 
 	* common: fix util-linux 2.21.2 to build for microblaze
+	* common: fix dbus 1.6.4 to build with latest glibc
+		  fix default version from global ptxdist rule set
 
 2013-12-03	Stephan Linz <linz@li-pro.net>
 
